--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,15 +6,27 @@
 
 }
 
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #F2F2F2;
+
+}
+
 
 header {
-    background-color: lightsteelblue;
+    background-color: #BABABA;
 }
 
 main {
-    background-color: lightgrey;
+    background-color: #0D0D0D;
+    /* Make main element take up all surplus space to push footer to the bottom */
+    flex: 1 0 0;
 }
 
 footer {
-    background-color: lightslategrey;
+    background-color: #F2F2F2;
 }
