--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/* Google Fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Inconsolata:wght@200..900&display=swap');
+
+
 /* Asterisk wildcard selector to override default browser styles */
 * {
     padding: 0;
@@ -13,6 +17,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #F2F2F2;
+    font-family: "Inconsolata", monospace;
 
 }
 
