Add logo to header, apply Karla font, remove link underline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,15 @@ header {
     background-color: #BABABA;
 }
 
+a {
+    text-decoration: none;
+}
+
+h1, h2, h3 {
+    font-family: "Karla", sans-serif;
+}
+
+
 main {
     background-color: #0D0D0D;
     /* Make main element take up all surplus space to push footer to the bottom */
