--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,16 +24,18 @@ body {
 
 header {
     background-color: #BABABA;
-    padding: 0 1rem; 
+    padding: 0 1rem;
     position: fixed;
     z-index: 50;
     width: 100%;
     box-shadow: 0 2px 3px #A80D0E;
+
 }
 
 header a {
     text-decoration: none;
     color: #424040;
+
 }
 
 h1,
@@ -42,6 +44,19 @@ h3 {
     font-family: "Karla", sans-serif;
 }
 
+#menu {
+    font-size: 110%;
+    letter-spacing: 2px;
+    list-style-type: none;
+}
+
+#menu>li {
+    margin-bottom: 0.7em;
+}
+
+.active {
+    border-bottom: 1px solid #424040;
+}
 
 main {
     background-color: #424040;
