Change favicon to sunflower

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 
 
 header {
-    background-color: #BABABA;
+    background-color: #f2f2f2;
     padding: 0 1rem;
     position: fixed;
     z-index: 50;
