--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,15 @@ body {
 
 header {
     background-color: #f2f2f2;
+    color: #424040;
     padding: 0 1rem;
     position: fixed;
     z-index: 50;
     width: 100%;
     box-shadow: 0 2px 3px #A80D0E;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 
 }
 
@@ -68,9 +72,25 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 3px #A80D0E;
     display: none;
+    /* This tells nav that it should start at bottom of parent. Top of parent would be top: 0% */
+    top: 100%;
+
 
 }
 
+/* Nav toggle */
+/* ~nav targets the nav element that is sibling to #nav-toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+#nav-toggle-label {
+    font-size: 2rem;
+}
 main {
     background-color: #424040;
     /* Make main element take up all surplus space to push footer to the bottom */
