--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ main {
     background-color: #424040;
     /* Make main element take up all surplus space to push footer to the bottom */
     flex: 1 0 0;
+    margin-top: 74px;
 }
 
 footer {
