--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ header {
     background-color: #f2f2f2;
     color: #424040;
     padding: 0 1rem;
-    position: fixed;
+    position: relative;
     z-index: 50;
     width: 100%;
     /* box-shadow: 0 2px 3px #A80D0E; */
@@ -36,11 +36,12 @@ header {
 
 }
 
-header a {
+a {
     text-decoration: none;
     color: #424040;
-
 }
+
+
 
 h1,
 h2,
@@ -51,6 +52,7 @@ h3 {
 
 
 #menu {
+    display: flex;
     font-size: 110%;
     letter-spacing: 2px;
     list-style-type: none;
@@ -58,6 +60,7 @@ h3 {
 
 #menu>li {
     margin-bottom: 0.7em;
+    padding-right: 1rem;
 }
 
 .active {
@@ -67,15 +70,16 @@ h3 {
 
 /* Navbar styles with dropdown toggle */
 nav {
-    position: absolute;
+    position: sticky;
+    top: 0;
     background-color: #F2F2F2;
     width: 100%;
-   left: 0;
+    left: 0;
     padding: 0 1rem;
     /* box-shadow: 0 2px 3px #A80D0E; */
-    display: none;
+    /* display: none; */
     /* This tells nav that it should start at bottom of parent. Top of parent would be top: 0% */
-    top: 100%;
+    /* top: 100%; */
 
 
 }
@@ -92,8 +96,8 @@ nav {
 
 #nav-toggle-label {
     font-size: 2rem;
-   
-   
+
+
 }
 
 main {
@@ -109,21 +113,22 @@ footer {
 
 /* Media querey: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
         position: relative;
         width: fit-content;
         padding-right: 1rem;
-        
+
     }
 
     #menu {
         display: flex;
-    
+
     }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
     }
 
