--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ h3 {
     font-size: 110%;
     letter-spacing: 2px;
     list-style-type: none;
+    padding-top: 8px;
 }
 
 #menu>li {
@@ -73,29 +74,11 @@ nav {
     position: sticky;
     top: 0;
     background-color: #F2F2F2;
-    width: 100%;
+    width: 100vw;
     left: 0;
     padding: 0 1rem;
-    /* box-shadow: 0 2px 3px #A80D0E; */
-    /* display: none; */
-    /* This tells nav that it should start at bottom of parent. Top of parent would be top: 0% */
-    /* top: 100%; */
+    box-shadow: 0 1px 1px #424040;
 
-
-}
-
-/* Nav toggle */
-/* ~nav targets the nav element that is sibling to #nav-toggle */
-#nav-toggle:checked~nav {
-    display: block;
-}
-
-#nav-toggle {
-    display: none;
-}
-
-#nav-toggle-label {
-    font-size: 2rem;
 
 
 }
@@ -104,7 +87,6 @@ main {
     background-color: #424040;
     /* Make main element take up all surplus space to push footer to the bottom */
     flex: 1 0 0;
-    margin-top: 74px;
 }
 
 footer {
@@ -115,25 +97,11 @@ footer {
 @media screen and (min-width: 768px) {
 
     /* Header */
-    nav {
+    /* nav {
         display: block;
         position: relative;
-        width: fit-content;
         padding-right: 1rem;
 
-    }
-
-    #menu {
-        display: flex;
-
-    }
-
-    #menu>li {
-        padding-left: 1rem;
-    }
-
-    #nav-toggle-label {
-        display: none;
-    }
+    } */
 
 }
