--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,23 +16,28 @@ body {
     display: flex;
     flex-direction: column;
     /* Generic project styles */
-    color: #F2F2F2;
+    color: #fff;
     font-family: "Inconsolata", monospace;
+    font-size: 1rem;
 
 }
 
 
 header {
-    background-color: #f2f2f2;
     color: #424040;
-    padding: 0 1rem;
+    padding: 0;
     position: relative;
     z-index: 50;
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+    justify-content: space-evenly;
+    align-items:baseline;
 
+}
+
+header #logo-img {
+    min-width: 83px;
+    background: #f2f2f2 url("../images/zawrel.png") left  center / cover no-repeat;
 }
 
 a {
@@ -72,7 +77,7 @@ h3 {
 nav {
     position: sticky;
     top: 0;
-    background-color: #F2F2F2;
+    background-color: #fff;
     width: 100vw;
     left: 0;
     padding: 0 1rem;
@@ -98,7 +103,6 @@ footer {
 #socials {
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
     font-size: 110%;
     letter-spacing: 2px;
     list-style-type: none;
