--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,20 +25,21 @@ body {
 
 header {
     color: #424040;
-    padding: 0;
+    padding-left: 1rem;
     position: relative;
     z-index: 50;
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items:baseline;
 
 }
 
-header #logo-img {
+/* header #logo-img {
+    height: 74px;
     min-width: 83px;
-    background: #f2f2f2 url("../images/zawrel.png") left  center / cover no-repeat;
-}
+    background: #f2f2f2 url("../images/zawrel.png") left center / cover no-repeat;
+} */
 
 a {
     text-decoration: none;
