--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
 }
 
-
+/* Header styles */
 header {
     color: #424040;
     padding-left: 1rem;
@@ -46,7 +46,7 @@ a {
     color: #424040;
 }
 
-
+H1 {display: inline;}
 
 h1,
 h2,
@@ -84,13 +84,25 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 1px 1px #424040;
 }
-
+/* Main content styles */
 main {
     background-color: #424040;
     /* Make main element take up all surplus space to push footer to the bottom */
     flex: 1 0 0;
 }
 
+/* .dark-bg {
+    background-color: inherit;
+    color: inherit;
+} */
+
+.light-bg {
+    background-color: #fff;
+    color: #424040;
+}
+
+
+/* Footer styles */
 footer {
     position: fixed;
     bottom: 0;
