--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items:baseline;
+    align-items: baseline;
 
 }
 
@@ -46,14 +46,11 @@ a {
     color: #424040;
 }
 
-H1 {display: inline;}
-
 h1,
 h2,
 h3 {
     font-family: "Karla", sans-serif;
 }
-
 
 
 #menu {
@@ -84,6 +81,7 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 1px 1px #424040;
 }
+
 /* Main content styles */
 main {
     background-color: #424040;
@@ -99,6 +97,21 @@ main {
 .light-bg {
     background-color: #fff;
     color: #424040;
+}
+
+#intro {
+    display: flex;
+    flex-direction: row;
+}
+#intro-text {
+    margin: 1rem;
+    flex: 1 0;
+}
+
+#intro-img > img {
+    max-width: 100%;
+    height: auto;
+    
 }
 
 
@@ -122,15 +135,11 @@ footer {
     padding-top: 8px;
 }
 
-#socials > li {
+#socials>li {
     margin-bottom: 0.7em;
     padding-right: 1rem;
 
 }
 
 /* Media querey: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {
-
-
-
-}
+@media screen and (min-width: 768px) {}
