--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,14 +126,58 @@ main {
     width: 300px;
     height: 300px;
     padding: 1em;
-    bottom: 10%
+    bottom: 10%;
 }
 
 .scroll-down {
     text-align: right;
     
 }
+
+#childhood-container {
+    position: relative;
+    margin: auto;
+    height: 100vh;
+    width: 100vw;
+    display: flex; 
+    flex-wrap: wrap;
+
+}
+#childhood-container > video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    position: relative;
+    z-index: -1;
+  }
+
+  #childhood-text-1 {
+    position: absolute;
+    background-color: rgba(f, f, f, .6);
+    /* height: 0; */
+    text-align:justify;
+    width: 300px;
+    height: 300px;
+    padding: 1em;
+    border: 1px solid #424040;
+    top: 10%;
+    bottom: 10%;
+    right: 10%;
+  }
   
+  #childhood-text-2 {
+    position: absolute;
+    background-color: rgba(f, f, f, .6);
+    /* height: 0; */
+    text-align:justify;
+    width: 300px;
+    height: 300px;
+    padding: 1em;
+    border: 1px solid #424040;
+    top: 10%;
+    bottom: 10%;
+    right: 10%;
+  }
 /* #intro-img-container {
 
 }
