--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,6 @@ main {
     background-color: #424040;
     /* Make main element take up all surplus space to push footer to the bottom */
     flex: 1 0 auto;
-
 }
 
 /* .dark-bg {
@@ -101,9 +100,6 @@ main {
     color: #424040;
 }
 
-#intro {
-   
-}
 #intro-container {
     max-width: 424px;
     position: relative;
@@ -113,10 +109,9 @@ main {
     background-attachment: fixed;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center 112px;
+    background-position: center 38px;
   
 }
-
 
 #intro-text {
     position: absolute;
@@ -126,7 +121,7 @@ main {
     width: 300px;
     height: 300px;
     padding: 1em;
-    bottom: 10%;
+    bottom: 20%;
 }
 
 .scroll-down {
@@ -134,18 +129,22 @@ main {
     
 }
 
+/* #early-childhood {
+    box-sizing: border-box;
+} */
+/*
 #childhood-container {
     position: relative;
     margin: auto;
     height: 100vh;
     width: 100vw;
     display: flex; 
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 
-}
+/* }
 #childhood-container > video {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
     position: relative;
     z-index: -1;
@@ -154,8 +153,8 @@ main {
   #childhood-text-1 {
     position: absolute;
     background-color: rgba(f, f, f, .6);
-    /* height: 0; */
-    text-align:justify;
+    height: 0; */
+    /* text-align:justify;
     width: 300px;
     height: 300px;
     padding: 1em;
@@ -168,7 +167,6 @@ main {
   #childhood-text-2 {
     position: absolute;
     background-color: rgba(f, f, f, .6);
-    /* height: 0; */
     text-align:justify;
     width: 300px;
     height: 300px;
@@ -176,20 +174,10 @@ main {
     border: 1px solid #424040;
     top: 10%;
     bottom: 10%;
-    right: 10%;
-  }
-/* #intro-img-container {
+    right: 10%; 
+    
+}*/
 
-}
-
-}
-
-#intro-img {
-    right: 1rem;
-    flex: 1 1 100px;
-    z-index: 2;
-
-} */
 
 
 
@@ -219,5 +207,32 @@ footer {
 
 }
 
-/* Media querey: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {}
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+
+    #intro-container {
+        min-width: 100%;
+        max-width: 100%;
+        background-image: url(../images/friedrich-zawrel-1978-zeitung.jpg);
+        background-size: cover;
+      
+    }
+
+    #intro-text {
+ 
+        bottom: 30%;
+    }
+    
+
+}
+
+/* Media query: laptops and larger (1024px and up) */
+@media screen and (min-width: 1024px) {
+
+    #intro-container {
+        max-width: 1023px;
+        background-size: contain;
+
+      
+    }
+}
