--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,7 +219,9 @@ footer {
     }
 
     #intro-text {
- 
+        width: 370px;
+        height: 300px;
+        padding: 2em 3em 3em 2em;
         bottom: 30%;
     }
     
@@ -235,4 +237,13 @@ footer {
 
       
     }
+
+
+    #intro-text {
+        
+        width: 420px;
+        height: 300px;
+        padding: 3em 4em 4em 2em;
+    }
+    
 }
