--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ main {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center 38px;
+    box-shadow: 0 1px 1px #424040;
   
 }
 
@@ -135,25 +136,29 @@ main {
 
 #childhood-container {
     position: relative;
-    /* margin: auto; */
-    height: 100vh;
     width: 100vw;
     display: flex; 
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 /* 
 #childhood-container > video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    min-width: 300px;
+    object-fit: contain;
     position: relative;
-    z-index: -1;
+    order: 2;
+    z-index: -5;
   }
 */
 #childhood-container h2 {
-    margin-top: 2rem;
+  margin: 2rem;
+   flex-basis: 100%;
+
 }
-  #childhood-text-1 {
+
+#childhood-container div {
     position: relative;
     background-color: rgba(f, f, f, .6);
     text-align:justify;
@@ -161,18 +166,16 @@ main {
     height: 300px;
     padding: 1rem;
     border: 1px solid #424040;
+
+}
+  #childhood-text-1 {
+
     order: 1;
   } 
   
   #childhood-text-2 {
-    position: relative;
-    background-color: rgba(f, f, f, .6);
-    text-align:justify;
-    width: 300px;
-    height: 300px;
-    padding: 1rem;
-    border: 1px solid #424040;
-    order: 2;
+   
+    order: 3;
     
 }
 
