--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h3 {
 }
 
 h2 {
-    margin: 2rem;
+    margin: 2rem 1rem 1rem;
 }
 
 
@@ -134,56 +134,62 @@ main {
     
 }
 
-/* #early-childhood {
-    box-sizing: border-box;
-} */
 
 #childhood-container {
     position: relative;
     width: 100vw;
+    height: 100;
     display: flex; 
     justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
+    background-image: url(../images/hj-marching-white.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center 90px;
+    box-shadow: 0 1px 1px #424040;
+
 }
-/* 
-#childhood-container > video {
-    max-width: 100%;
-    min-width: 300px;
-    object-fit: contain;
-    position: relative;
-    order: 2;
-    z-index: -5;
-  }
-*/
+
 #childhood-container h2 {
    flex-basis: 100%;
+   
 
 }
 
 #childhood-container div {
-    position: relative;
-    background-color: rgba(f, f, f, .6);
+    background-color: rgba(255, 255, 255, 0.6);
     text-align:justify;
     width: 300px;
     height: 300px;
     padding: 1rem;
     border: 1px solid #424040;
+    margin: 2rem 10px;
+    z-index: 50;
 
 }
   #childhood-text-1 {
 
     order: 1;
-  } 
-  
+  }
+
+
   #childhood-text-2 {
-   
+   top: 400px;
     order: 3;
-    
 }
 
+#childhood-img {
+    border: none; 
+    order: 2;
+    z-index: 1;
+}
 
-
+#childhood-img>img{
+    width: 300px;
+    
+  }
+  
 
 /* Footer styles */
 footer {
