--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,13 +146,14 @@ main {
     background-image: url(../images/hj-marching-white.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center 90px;
+    background-position: center;
     box-shadow: 0 1px 1px #424040;
 
 }
 
 #childhood-container h2 {
    flex-basis: 100%;
+   color: white;
    
 
 }
@@ -169,13 +170,11 @@ main {
 
 }
   #childhood-text-1 {
-
     order: 1;
   }
 
 
   #childhood-text-2 {
-   top: 400px;
     order: 3;
 }
 
@@ -215,6 +214,27 @@ footer {
     margin-bottom: 0.7rem;
     padding-right: 1rem;
 
+}
+
+
+/*Media query: (640px and up) */
+@media screen and (min-width: 640px) {
+
+    #childhood-container {
+        height: 740px;
+    }
+
+
+    #childhood-text-1 {
+        position: relative;
+        top: -200px;
+        order: 3;
+    }
+    #childhood-text-2 {
+        position: relative;
+        top: 100px;
+        order: 1;
+    }
 }
 
 /* Media query: tablets and larger (768px and up) */
