--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ main {
 #childhood-container {
     position: relative;
     width: 100vw;
-    height: 100;
+    height: 100vh;
     display: flex; 
     justify-content: space-evenly;
     align-items: flex-start;
@@ -146,16 +146,18 @@ main {
     background-image: url(../images/hj-marching-white.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 62px;
     box-shadow: 0 1px 1px #424040;
 
 }
 
 #childhood-container h2 {
    flex-basis: 100%;
-   color: white;
-   text-shadow: 0px 0px 5px #000000;
-   
+   background-color: rgba(208, 208, 208, 0.6);
+    text-align:justify;
+    padding: 1rem;
+    border: 1px solid #424040;
+    z-index: 50;
 
 }
 
@@ -223,18 +225,18 @@ footer {
 @media screen and (min-width: 640px) {
 
     #childhood-container {
-        height: 740px;
+        height: 900px;
     }
 
 
     #childhood-text-1 {
         position: relative;
-        top: -200px;
+        top: -180px;
         order: 3;
     }
     #childhood-text-2 {
         position: relative;
-        top: 150px;
+        top: 195px;
         order: 1;
     }
 }
