--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,18 @@ bottom: 20%;
     width: 300px;
 }
 
+#meeting-gross-text {
+
+background-color: rgb(0, 0, 0);
+color: #fff;
+text-align:justify;
+padding: 1rem;
+width: 100%;
+margin: 0 10px;
+border-radius: 5px;
+
+}
+
 /* Footer styles */
 footer {
     position: fixed;
