--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,15 @@ padding: 1rem;
 bottom: 20%;
 }
 
+#spiegelgrund-info {
+    min-height: 
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+
+}
 
   #spiegelgrund-info-text {
     position: relative;
@@ -222,18 +231,36 @@ bottom: 20%;
     padding: 1rem;
     border: 1px solid #424040;
     border-radius: 5px;
-    margin: 2rem 10px;
+    margin: 2rem auto;
 }
 
-#spiegelhof-img>figure {
-    margin: 0 10px;
+#spiegelhof-img {
+    padding-bottom: 30px;
+}
+figcaption {
+    margin: 0 auto;
+    text-align: center;
   }
 
 #spiegelhof-img>figure>img {
     display: block;
     width: 300px;
+    margin: 0 auto;
 }
 
+#meeting-gross-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    
+}
+#meeting-gross-text h2 {
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 1rem;
+    text-align: left;
+}
 #meeting-gross-text {
 
 background-color: rgb(0, 0, 0);
@@ -241,7 +268,7 @@ color: #fff;
 text-align:justify;
 padding: 1rem;
 width: 100%;
-margin: 0 10px;
+margin: 1rem 10px;
 border-radius: 5px;
 
 }
