Add skeleton sections uncovering and eulogy, add guestbook form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
 
 /* General styles */
@@ -19,7 +18,6 @@ body {
     color: #fff;
     font-family: "Inconsolata", monospace;
     font-size: 1rem;
-
 }
 
 /* Header styles */
@@ -32,14 +30,7 @@ header {
     display: flex;
     justify-content: flex-start;
     align-items: baseline;
-
 }
-
-/* header #logo-img {
-    height: 74px;
-    min-width: 83px;
-    background: #f2f2f2 url("../images/zawrel.png") left center / cover no-repeat;
-} */
 
 a {
     text-decoration: none;
@@ -72,7 +63,6 @@ h2 {
 
 .active {
     border-bottom: 1px solid #424040;
-
 }
 
 /* Sticky navbar styles */
@@ -94,16 +84,16 @@ main {
     flex: 1 0 auto;
 }
 
-/* .dark-bg {
-    background-color: inherit;
-    color: inherit;
-} */
-
 .light-bg {
     background-color: #fff;
     color: #424040;
 }
 
+.scroll-down {
+    text-align: right;
+}
+
+/* Intro section */
 #intro-container {
     max-width: 424px;
     position: relative;
@@ -115,31 +105,28 @@ main {
     background-repeat: no-repeat;
     background-position: center 38px;
     box-shadow: 0 1px 1px #424040;
-  
 }
 
 #intro-text {
     position: absolute;
     background-color: rgba(0, 0, 0, .6);
-    /* height: 0; */
-    text-align:justify;
+    text-align: justify;
     width: 300px;
     height: 300px;
     padding: 1rem;
     bottom: 20%;
 }
 
-.scroll-down {
-    text-align: right;
-    
+#intro-text>h2 {
+    display: none;
 }
 
-
+/* Childhood section */
 #childhood-container {
     position: relative;
     width: 100vw;
     height: 100vh;
-    display: flex; 
+    display: flex;
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
@@ -162,27 +149,24 @@ main {
 
 #childhood-container div {
     background-color: rgba(255, 255, 255, 0.6);
-    text-align:justify;
+    text-align: justify;
     width: 300px;
     height: 300px;
     padding: 1rem;
     margin: 0rem 10px 2rem;
     border-radius: 5px;
     z-index: 50;
+}
 
- }
-
-
-  #childhood-text-1 {
+#childhood-text-1 {
     order: 1;
+}
 
-  }
-
-
-  #childhood-text-2 {
+#childhood-text-2 {
     order: 3;
 }
 
+/* Spiegelgrund section */
 #spiegelgrund-container {
     position: relative;
     margin: auto;
@@ -200,32 +184,27 @@ main {
 
 }
 
-
-
 #spiegelgrund-text {
-background-color: rgba(0, 0, 0, .6);
-text-align:justify;
-width: 300px;
-height: 400px;
-padding: 1rem;
-bottom: 20%;
+    background-color: rgba(0, 0, 0, .6);
+    text-align: justify;
+    width: 300px;
+    height: 400px;
+    padding: 1rem;
+    bottom: 20%;
 }
 
 #spiegelgrund-info {
-    min-height: 
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-
-
 }
 
-  #spiegelgrund-info-text {
+#spiegelgrund-info-text {
     position: relative;
     background-color: rgba(255, 255, 255, 0.9);
     color: #424040;
-    text-align:justify;
+    text-align: justify;
     width: 300px;
     height: 300px;
     padding: 1rem;
@@ -235,12 +214,14 @@ bottom: 20%;
 }
 
 #spiegelhof-img {
+    margin: auto;
     padding-bottom: 30px;
 }
+
 figcaption {
     margin: 0 auto;
     text-align: center;
-  }
+}
 
 #spiegelhof-img>figure>img {
     display: block;
@@ -248,29 +229,71 @@ figcaption {
     margin: 0 auto;
 }
 
+/* Meeting Gross section */
 #meeting-gross-container {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-    
+
 }
+
 #meeting-gross-text h2 {
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 1rem;
     text-align: left;
 }
+
 #meeting-gross-text {
 
-background-color: rgb(0, 0, 0);
-color: #fff;
-text-align:justify;
-padding: 1rem;
-width: 100%;
-margin: 1rem 10px;
-border-radius: 5px;
+    background-color: #424040;
+    color: #fff;
+    text-align: justify;
+    padding: 1rem;
+    width: 100%;
+    margin: 1rem 10px;
+    border-radius: 5px;
+}
 
+/* Form */
+#guestbook-form {
+    position: relative;
+    top: 0px;
+    
+}
+
+#guestbook-form p {
+    padding-left: 1rem;
+}
+
+#guestbook-form a {
+    color: #F2F2F2;
+}
+
+#form {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 1rem 1rem 80px;
+}
+
+label {
+    display:block;
+    margin-top: 5px;
+}
+.id {
+    margin: 5px 0;
+    padding: 5px;
+}
+
+textarea {
+    width: 80vw;
+    margin: 5px 0;
+}
+
+input[type=submit] {
+    padding: 5px;
+    font-family: Inconsolata, monospace;
 }
 
 /* Footer styles */
@@ -282,8 +305,6 @@ footer {
     color: #424040;
     z-index: 99;
 }
-
-
 
 #socials {
     display: flex;
@@ -297,7 +318,6 @@ footer {
 #socials>li {
     margin-bottom: 0.7rem;
     padding-right: 1rem;
-
 }
 
 
@@ -306,43 +326,23 @@ footer {
 
     #childhood-container {
         height: 900px;
-    
+
     }
 
     #childhood-container #childhood-h2 {
         display: flex;
         flex-basis: 100%;
         flex-direction: row;
-       min-width: 300px; 
-      flex-grow: 0;
-
-    
-    } 
-
-  .h2-spacer-1 {
-        flex-grow: 1;
+        min-width: 300px;
+        flex-grow: 0;
     }
-
-
-.h2-spacer-2 {
-        flex-grow: 3;
-    }
-
-
-    #childhood-h2>h2 {
-           /* text-align:center; */
-           /* width: 300px;
-           padding: 1rem;
-           border: 1px solid #424040;
-           margin: 2rem 10px;
-           z-index: 50; */
-       }
 
     #childhood-text-1 {
         position: relative;
         top: -220px;
         order: 3;
     }
+
     #childhood-text-2 {
         position: relative;
         top: 0px;
@@ -358,7 +358,7 @@ footer {
         max-width: 100%;
         background-image: url(../images/friedrich-zawrel-1978-zeitung.jpg);
         background-size: cover;
-      
+
     }
 
     #intro-text {
@@ -367,7 +367,7 @@ footer {
         padding: 2rem 3rem 3rem 2rem;
         bottom: 30%;
     }
-    
+
 
 }
 
@@ -378,20 +378,19 @@ footer {
         max-width: 1023px;
         background-size: contain;
         background-position-x: 25vw;
-
-      
     }
 
 
     #intro-text {
-        
+
         width: 420px;
         height: 300px;
         padding: 3rem 4rem 4rem 2rem;
         margin-left: 20%;
     }
-    
+
 }
+
 /* 
 /* Media query: desktops (1044px and up) */
 @media screen and (min-width: 1044px) {
@@ -404,4 +403,4 @@ footer {
         margin-left: 20%;
     }
 
-} */
+}
