--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,11 +84,23 @@ main {
     flex: 1 0 auto;
 }
 
+
 .light-bg {
     background-color: #fff;
     color: #424040;
 }
 
+.light-bg a {
+    color: rgb(15, 150, 15);
+}
+
+.dark-bg a {
+    color: violet;
+}
+
+.ul-link {
+    text-decoration: underline;
+}
 .scroll-down {
     text-align: right;
 }
@@ -99,7 +111,7 @@ main {
     position: relative;
     margin: auto;
     height: 100vh;
-    background-image: url(../images/friedrich-zawrel-1978.jpg);
+    background-image: url(../images/friedrich-zawrel-1978.webp);
     background-attachment: fixed;
     background-size: contain;
     background-repeat: no-repeat;
@@ -131,7 +143,7 @@ main {
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
-    background-image: url(../images/hitler-youth-fog-bg.png);
+    background-image: url(../images/hitler-youth-fog-bg.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 0px;
@@ -176,7 +188,7 @@ main {
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-    background-image: url(../images/am-spiegelgrund-hallway.jpg);
+    background-image: url(../images/am-spiegelgrund-hallway.webp);
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
@@ -268,9 +280,6 @@ figcaption {
     padding-left: 1rem;
 }
 
-.violet-link {
-    color: violet;
-}
 
 #form {
     display: flex;
@@ -296,6 +305,10 @@ input[type=submit] {
     padding: 5px;
     font-family: Inconsolata, monospace;
 }
+
+
+/* Guestbook page */
+
 
 /* Footer styles */
 footer {
@@ -357,7 +370,7 @@ footer {
     #intro-container {
         min-width: 100%;
         max-width: 100%;
-        background-image: url(../images/friedrich-zawrel-1978-zeitung.jpg);
+        background-image: url(../images/friedrich-zawrel-1978-zeitung.webp);
         background-size: cover;
 
     }
