--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     /* Generic project styles */
-    color: #fff;
+    color: #f2f2f2;
     font-family: "Inconsolata", monospace;
     font-size: 1rem;
 }
@@ -23,6 +23,7 @@ body {
 /* Header styles */
 header {
     color: #424040;
+    background-color: #f2f2f2;
     padding-left: 1rem;
     position: relative;
     z-index: 50;
@@ -69,7 +70,7 @@ h2 {
 nav {
     position: sticky;
     top: 0;
-    background-color: #fff;
+    background-color: #f2f2f2;
     width: 100vw;
     left: 0;
     padding: 0 1rem;
@@ -86,16 +87,16 @@ main {
 
 
 .light-bg {
-    background-color: #fff;
+    background-color: #f2f2f2;
     color: #424040;
 }
 
 .light-bg a {
-    color: rgb(15, 150, 15);
+    color: black;
 }
 
 .dark-bg a {
-    color: pink;
+    color: white;
 }
 
 .ul-link {
@@ -153,8 +154,8 @@ main {
 
 #childhood-container h2 {
     flex-basis: 100%;
-    text-shadow: 0 0 6px #fff;
-    background-image: linear-gradient(white, #d0d0d0);
+    text-shadow: 0 0 6px #f2f2f2;
+    background-image: linear-gradient(#f2f2f2, #d0d0d0);
     padding: 1rem;
     margin: 0rem 0px 2rem;
 
@@ -261,7 +262,7 @@ figcaption {
 #meeting-gross-text {
 
     background-color: #424040;
-    color: #fff;
+    color: #f2f2f2;
     text-align: justify;
     padding: 1rem;
     width: 100%;
@@ -309,13 +310,71 @@ input[type=submit] {
 
 /* Guestbook page */
 
+#guestbook-table {
+    height: 70vh;
+}
 
+#guestbook-table p {
+    margin: 0 1rem;
+}
+
+table, td, th {
+    border: 1px solid;
+    background-color: #f2f2f2;
+    color: #424040;
+    margin: 10px 1rem;
+    text-align: left;
+    padding: 5px;
+    
+}
+
+/* Resources page */
+ 
+#resources {
+    background-color: #f2f2f2;
+    color: #424040;
+}
+
+
+#video-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    min-width: 300px;
+    max-width: 80%;
+    height: 0;
+    padding-bottom: 75%;
+    margin: auto;
+    
+}
+
+#video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#links-container {
+    margin: 0 0 80px 2rem;
+}
+
+#links {
+    list-style-type: square;
+}
+
+#links li {
+    padding-bottom: 5px;
+ 
+}
 /* Footer styles */
 footer {
     position: fixed;
     bottom: 0;
     width: 100vw;
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
     color: #424040;
     z-index: 99;
 }
