--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ main {
 .ul-link {
     text-decoration: underline;
 }
+
 .scroll-down {
     text-align: right;
 }
@@ -157,7 +158,7 @@ main {
     text-shadow: 0 0 6px #f2f2f2;
     background-image: linear-gradient(#f2f2f2, #d0d0d0);
     padding: 1rem;
-    margin: 0rem 0px 2rem;
+    margin: 0rem 0px 0rem;
 
 }
 
@@ -274,7 +275,7 @@ figcaption {
 #guestbook-form {
     position: relative;
     top: 0px;
-    
+
 }
 
 #guestbook-form p {
@@ -289,9 +290,10 @@ figcaption {
 }
 
 label {
-    display:block;
+    display: block;
     margin-top: 5px;
 }
+
 .id {
     margin: 5px 0;
     padding: 5px;
@@ -318,19 +320,21 @@ input[type=submit] {
     margin: 0 1rem;
 }
 
-table, td, th {
+table,
+td,
+th {
     border: 1px solid;
     background-color: #f2f2f2;
     color: #424040;
     margin: 10px 1rem;
     text-align: left;
     padding: 5px;
-    
+
 }
 
 /* Resources page */
- 
-#resources {
+
+#resources-main {
     background-color: #f2f2f2;
     color: #424040;
 }
@@ -345,7 +349,7 @@ table, td, th {
     height: 0;
     padding-bottom: 75%;
     margin: auto;
-    
+
 }
 
 #video {
@@ -367,8 +371,9 @@ table, td, th {
 
 #links li {
     padding-bottom: 5px;
- 
+
 }
+
 /* Footer styles */
 footer {
     position: fixed;
